# psoxide

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/psoxide-config/: Cargo.toml
crates/psoxide-config/src/: lib.rs
crates/psoxide-core/: Cargo.toml
crates/psoxide-core/src/: api.rs  bus.rs  cdrom.rs  dma.rs  gpu.rs  gte.rs  iostubs.rs  irq.rs  lib.rs  mdec.rs  spu.rs  timers.rs  timing.rs
crates/psoxide-core/src/cpu/: decode.rs  engine.rs  execute.rs  mod.rs
crates/psoxide-core/tests/: proptest_cpu.proptest-regressions  proptest_cpu.rs  proptest_gte.proptest-regressions  proptest_gte.rs
crates/psoxide-desktop/: Cargo.toml
crates/psoxide-desktop/src/: audio.rs  main.rs  savestate.rs
crates/psoxide-proof/: Cargo.toml
crates/psoxide-proof/src/: bus_map.rs  decode.rs  lib.rs  map_region.rs  timing.rs
crates/psoxide-test-harness/: Cargo.toml  README.md
crates/psoxide-test-harness/benches/: hot_loop.rs
crates/psoxide-test-harness/src/: disc.rs  lib.rs
crates/psoxide-test-harness/tests/: analog_pad.rs  bios_smoke.rs  cd_audio.rs  cdrom.rs  cpu_program.rs  cpu_semantics.rs  exe_loader.rs  gpu_frame.rs  gte_tests.rs  io_stubs.rs  mdec.rs  memory_card.rs  ps1_tests.rs  scheduler_equivalence.rs  sio0_joypad.rs  spu.rs
crates/psoxide-test-harness/tests/fixtures/ps1-tests/: LICENSE  README.md
scripts/: verus-check.ps1  verus-check.sh
