[package]
name = "psoxide-test-harness"
version = "0.1.0"
edition = "2024"

[dependencies]
psoxide-core = { path = "../psoxide-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The CUE/BIN disc-image parser (`disc` module) lives in psoxide-config; the
# CD-ROM integration test drives it directly.
psoxide-config = { path = "../psoxide-config" }
